# agent-harness

./: .gitignore  AGENTS.md  CRITIQUE.md  Cargo.toml  README.md  ah  harness.config.yaml  patch_cli.patch  patch_fix.patch  patch_github.patch  patch_github2.patch  patch_gitignore.patch  patch_gitignore2.patch  patch_main.patch  patch_simple.patch  patch_tui.patch  patch_write_force.patch  plan.md  test_get_bootstrap.rs  test_github.rs  test_list.rs
.claude/agents/: library-agent.md  task-agent.md
.github/workflows/: ci.yml
docs/: CODE_INDEX.json  INDEX.yaml
docs/architecture/: SUPERPOWERS_INTEGRATION.md
docs/interop/: TOOLS.md  tool_definitions.json
docs/memories/: entities.json
docs/migration/: MIGRATE_TO_V2.md
docs/review/: REVIEW_20260104.md
docs/tasks/: GUIDE.md  INDEX.yaml  README.md
scripts/: bootstrap.py  code_index.py  comm.py  continuity.py  design.py  generate_tools.py  index.py  memory.py  orchestrator.py  quality.py  review.py  tasks.py  tdd.py  tools.sh  workspace.py
scripts/lib/: audit.py  concurrency.py  config.py  io.py  yaml.py
src/: main.rs  main.rs.orig
src/api/: mod.rs
src/cli/: mod.rs
src/complex/: mod.rs
src/github/: mod.rs  mod.rs.orig
src/simple/: mod.rs  mod.rs.orig
src/tui/: mod.rs.orig
templates/: maintenance_mode.md
tests/: api.rs  cli.rs  test_bootstrap.py  test_code_index.py  test_comm.py  test_continuity.py  test_index.py  test_io.py  test_memory.py  test_orchestrator.py  test_review.py  test_tasks.py  test_tasks_agile.py  test_tasks_dependencies.py  test_tdd.py  test_yaml.py
(+65 files in other folders)
